RESOLVED FIXED255431
REGRESSION (259904@main): Gmail App stutters / jitters when scrolling down in compose view
https://bugs.webkit.org/show_bug.cgi?id=255431
Summary REGRESSION (259904@main): Gmail App stutters / jitters when scrolling down in...
Wenson Hsieh
Reported 2023-04-13 20:48:02 PDT
Attachments
Wenson Hsieh
Comment 1 2023-04-13 21:10:39 PDT
EWS
Comment 2 2023-04-14 07:02:40 PDT
Committed 262960@main (51677708a84b): <https://commits.webkit.org/262960@main> Reviewed commits have been landed. Closing PR #12726 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.